# scout-merit-badges-anki

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  scout-anki.json  spec.md
.github/: copilot-instructions.md
.github/workflows/: build-deck.yml  test.yml
scout_anki/: adventure.py  adventure_processor.py  cli.py  config.py  deck.py  directory.py  errors.py  image_utils.py  log.py  merit_badge.py  processor.py  schema.py
scout_anki/cub_adventures/: adventure.py  mapping.py  processor.py  schema.py
scout_anki/merit_badges/: data.py  mapping.py  processor.py  schema.py
scout_merit_badges_anki/: __init__.py  deck.py  log.py  mapping.py
tests/: test_cli.py  test_cli_comprehensive.py  test_cli_simple.py  test_cub_adventures.py  test_merit_badges.py  test_scout_merit_badges_anki.py
